k8s/pod/yaml/resources/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment-system
  namespace: system
  labels:
    app.kubernetes.io/name: name
    app.kubernetes.io/instance: instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: component
    app.kubernetes.io/part-of: part-of
    app.kubernetes.io/managed-by: managed-by
spec:
  selector:
    matchLabels:
      pod: system
  template:
    metadata:
      labels:
        pod: system
        app.kubernetes.io/name: name
        app.kubernetes.io/instance: instance
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: component
        app.kubernetes.io/part-of: part-of
        app.kubernetes.io/managed-by: managed-by
    spec:
      imagePullSecrets:
        - name: secret-docker
      containers:
        - name: container-app
          image: ghcr.io/aleogr/k8s-app
          volumeMounts:
            - name: volume-container1-properties
              mountPath: "/config"
              readOnly: true
            - name: volume-secret-generic
              mountPath: /etc/secret
          args: ["$(PORT)"]
      volumes:
        - name: volume-container1-properties
          configMap:
            name: configmap-props
            items:
              - key: "container1.properties"
                path: "container1.properties"
        - name: volume-secret-generic
          secret:
            secretName: secret-generic
