k8s/pod/yaml/resources/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-system
  namespace: system
  labels:
    app.kubernetes.io/name: name
    app.kubernetes.io/instance: instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: component
    app.kubernetes.io/part-of: part-of
    app.kubernetes.io/managed-by: managed-by
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-system
                port:
                  name: port-api
